2017-02-03 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_sizeinbase, mpz_get_str, mpz_set_str): Support
	bases up to 62.
	* tests/t-str.c: Update tests accordingly.

2016-11-27 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_get_si): fewer branches, safer forumla for negatives.

	* tests/t-signed.c: Removed a typo

2016-11-24  Niels Möller  <nisse@lysator.liu.se>

	* tests/hex-random.c (mkseed): Produce a 48-bit mpz_t value,
	regardless of word size.
	(hex_random_init): Use gmp_randseed instead of gmp_randseed_ui,
	and support seeds exceeding an unsigned long.

	* tests/hex-random.c (mkseed): New function, using /dev/urandom
	for random seed when available.
	(hex_random_init): Use it.

2016-11-23  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (GMP_CMP): New macro.
	(mpz_sgn, mpz_cmp_si, mpz_cmp_ui, mpz_cmpabs_ui): Use it.

2016-11-22  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-invert.c (test_3by2, test_2by1): New functions,
	extracted from testmain.
	(testmain): Add test with inputs which triggered the
	mpn_invert_3by2 bug (see 2016-11-16 entry).

2016-11-21 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/t-signed.c: compare different signs, and after overflow.

2016-11-20  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-signed.c: Reorganize testcase, to avoid undefined
	behaviour with signed overflow.

2016-11-19  Niels Möller  <nisse@lysator.liu.se>

	* tests/run-tests: Set up LD_LIBRARY_PATH and DYLD_LIBRARY_PATH
	for tests only, based on TEST_LIBRARY_PATH.

	* tests/mini-random.h: Use name "../mini-gmp.h" for include, so we
	don't need any -I options to the compiler.

	* tests/Makefile: Pass CFLAGS to the linker, as
	recommended by the GNU coding standard.
	(CPPFLAGS): New variable, with empty default value.
	(CFLAGS): Remove the -I flag involving MINI_GMP_DIR, to leave free
	for overriding on make command line.
	(EXTRA_CFLAGS): Deleted variable, no longer needed.

2016-11-18  Torbjörn Granlund  <tg@gmplib.org>
